--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <script src="data/m.js"></script>
     <!-- UI -->
     <script src="yagui/yagui.js"></script>
-    <!-- CSS -->
+    <!-- CSS
     <link rel="stylesheet" type="text/css" href="css/yagui.css">
-
+	-->
 </head>
 <body>
 	<!--	
