trying out new css

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <script src="data/m.js"></script>
     <!-- UI -->
     <script src="yagui/yagui.js"></script>
-    <!-- CSS
-    <link rel="stylesheet" type="text/css" href="css/yagui.css">
-	-->
+    CSS
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+	
 </head>
 <body>
 	<!--	
