--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 
     <title>WebGL 3D Human Body Generator</title>
 
-    <!--
+    
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	-->
-
+	
+	<!-- W3 theme -->
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- 3D -->
     <script src="threejs/three.min.js"></script>
     <script src="threejs/Detector.js"></script>
@@ -23,8 +26,9 @@
     <script src="data/m.js"></script>
     <!-- UI -->
     <script src="yagui/yagui.js"></script>
-    CSS
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
+	
 	
 </head>
 <body>
@@ -33,11 +37,53 @@
     </div>
 	<script type='text/javascript' src='main.js'></script>
 	-->
-	<form action="/upload_image.php" method="POST" enctype="multipart/form-data">
+	
+<div class="w3-row-padding w3-center w3-margin-top">
+	<div class="w3-third">
+		<div class="w3-card w3-container" style="min-height:460px">
+			<h3>Responsive</h3><br>
+			<i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+			<p>Built-in responsiveness</p>
+			<p>Mobile first fluid grid</p>
+			<p>Fits any screen sizes</p>
+			<p>PC Tablet and Mobile</p>
+		</div>
+	</div>
+
+	<div class="w3-third">
+		<div class="w3-card w3-container" style="min-height:460px">
+			<h3>Standard CSS</h3><br>
+			<i class="fa fa-css3 w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+			<p>Standard CSS only</p>
+			<p>Easy to learn</p>
+			<p>No need for jQuery</p>
+			<p>No JavaScript library</p>
+		</div>
+	</div>
+
+	<div class="w3-third">
+		<div class="w3-card w3-container" style="min-height:460px">
+			<h3>Design</h3><br>
+			<i class="fa fa-diamond w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+			<p>Paper like design</p>
+			<p>Bold colors and shadows</p>
+			<p>Equal across platforms</p>
+			<p>Equal across devices</p>
+		</div>
+	</div>
+</div>
+	<h2>Input Form</h2>
+	<div class="w3-section">      
+		<input class="w3-input" type="text" required>
+		<label>Name</label>
+	</div>
+	<div class="w3-section">      
+		<form action="/upload_image.php" method="POST" enctype="multipart/form-data">
 		Select image to upload: <br>
 		<input type = "file" id = "img" name="img" accept="image/*"><br>
 		<input type = "submit">
 	</form>
-	
+	</div>
+
 </body>
 </html>
