--- a/index.html
+++ b/index.html
@@ -37,53 +37,51 @@
     </div>
 	<script type='text/javascript' src='main.js'></script>
 	-->
-	
+
+<header class="w3-container w3-theme w3-padding" id="myHeader">
+  <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i> 
+  <div class="w3-center">
+  <h4>CUHK FYP MAEG 2020</h4>
+  <h1 class="w3-xxxlarge w3-animate-bottom">Machine Learning-Based 3D Human Model Generator</h1>
+  </div>
+</header>	
+
+
 <div class="w3-row-padding w3-center w3-margin-top">
 	<div class="w3-third">
 		<div class="w3-card w3-container" style="min-height:460px">
-			<h3>Responsive</h3><br>
+			<h3>Step 1</h3><br>
 			<i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			<p>Built-in responsiveness</p>
-			<p>Mobile first fluid grid</p>
-			<p>Fits any screen sizes</p>
-			<p>PC Tablet and Mobile</p>
+			<p>Choose image file</p>
+			<p>Upload image</p>
 		</div>
 	</div>
 
 	<div class="w3-third">
 		<div class="w3-card w3-container" style="min-height:460px">
-			<h3>Standard CSS</h3><br>
+			<h3>Step 2</h3><br>
 			<i class="fa fa-css3 w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			<p>Standard CSS only</p>
-			<p>Easy to learn</p>
-			<p>No need for jQuery</p>
-			<p>No JavaScript library</p>
+			<p>Image outline will be generated and displayed</p>
+			<p>Confirm image outline</p>
 		</div>
 	</div>
 
 	<div class="w3-third">
 		<div class="w3-card w3-container" style="min-height:460px">
-			<h3>Design</h3><br>
+			<h3>Step 3</h3><br>
 			<i class="fa fa-diamond w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			<p>Paper like design</p>
-			<p>Bold colors and shadows</p>
-			<p>Equal across platforms</p>
-			<p>Equal across devices</p>
+			<p>View the generated 3D human model</p>
+			<p>Upload another image</p>
 		</div>
 	</div>
 </div>
-	<h2>Input Form</h2>
-	<div class="w3-section">      
-		<input class="w3-input" type="text" required>
-		<label>Name</label>
-	</div>
-	<div class="w3-section">      
-		<form action="/upload_image.php" method="POST" enctype="multipart/form-data">
-		Select image to upload: <br>
-		<input type = "file" id = "img" name="img" accept="image/*"><br>
-		<input type = "submit">
+
+	<h2>Input</h2>         
+	<form action="/upload_image.php" method="POST" enctype="multipart/form-data">
+		Name: <input type="text" required><br> 
+		Select image to upload: <input type = "file" id = "img" name="img" accept="image/*"><br>
+		<input type = "submit" value="Upload">
 	</form>
-	</div>
 
 </body>
 </html>
