--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </div>
 
 	<h2>Input</h2>         
-	<form action="/upload_image.php" method="POST" enctype="multipart/form-data">
+	<form action="upload_image.php" method="POST">
 		Name: <input type="text" required><br> 
 		Select image to upload: <input type = "file" id = "img" name="img" accept="image/*"><br>
 		<input type = "submit" value="Upload">
