--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 	<h2>Input</h2>         
 	<form action="upload_image.php" method="POST">
 		Name: <input type="text" required><br> 
-		Select image to upload: <input type = "file" id = "img" name="img" accept="image/*"><br>
-		<input type = "submit" value="Upload">
+		Select image to upload:
+		<input type="file" name="fileToUpload" id="fileToUpload">
+		<input type="submit" value="Upload Image" name="submit">
 	</form>
 
 </body>
