--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 <header class="w3-container w3-theme w3-padding" id="myHeader">
   <div class="w3-center">
 	<h4>CUHK FYP MAEG 2020</h4>
-	<h1 class="w3-xxxlarge w3-animate-bottom">Machine Learning-Based 3D Human Model Generator</h1>
+	<h2 class="w3-xxxlarge w3-animate-bottom">Machine Learning-Based 3D Human Model Generator</h2>
   </div>
 </header>	
 
 
 <div class="w3-row-padding w3-center w3-margin-top">
 	<div class="w3-third">
-		<div class="w3-card w3-container" style="min-height:250px">
+		<div class="w3-card w3-container" style="min-height:260px">
 			<h3>Step 1</h3><br>
 			<i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
 			<p>Choose image file</p>
@@ -76,10 +76,10 @@
 </div>
 
 	<h2>Input</h2>         
-	<form action="upload_image.php" method="POST">
+	<form action="upload_image.php" method="POST" enctype="multipart/form-data">
 		Name: <input type="text" required><br> 
 		Select image to upload:
-		<input type="file" name="fileToUpload" id="fileToUpload">
+		<input type="file" name="fileToUpload" id="fileToUpload" accept="image/*"><br>
 		<input type="submit" value="Upload Image" name="submit">
 	</form>
 
