--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="w3-card w3-container" style="min-height:250px">
 			<h3>Step 2</h3><br>
 			<i class="fa fa-css3 w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			<p>Image outline will be generated and displayed</p>
+			<p>Generated image outline will be displayed</p>
 			<p>Confirm image outline</p>
 		</div>
 	</div>
@@ -75,13 +75,14 @@
 	</div>
 </div>
 
-	<h2>Input</h2>         
-	<form action="upload_image.php" method="POST" enctype="multipart/form-data">
-		Name: <input type="text" required><br> 
-		Select image to upload:
-		<input type="file" name="fileToUpload" id="fileToUpload" accept="image/*"><br>
-		<input type="submit" value="Upload Image" name="submit">
+	<h2>Upload Image</h2><br>
+	Select an image to upload:<br>
+	<form enctype="multipart/form-data" action="/upload/image" method="post">
+		<input type="file" id="myFile" name="image" accept="image/*"><br>
+		<input type="submit" value="Upload Image" name="submit" />
 	</form>
+	
+	<script src="upload.js"></script>
 
 </body>
 </html>
