--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 	<h2>Upload Image</h2><br>
 	Select an image to upload:<br>
-	<form enctype="multipart/form-data" action="/upload/image" method="post">
+	<form enctype="multipart/form-data" action="upload.js" method="post">
 		<input type="file" id="myFile" name="image" accept="image/*"><br>
 		<input type="submit" value="Upload Image" name="submit" />
 	</form>
