--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <div class="w3-row-padding w3-center w3-margin-top">
 	<div class="w3-third">
-		<div class="w3-card w3-container" style="min-height:260px">
+		<div class="w3-card w3-container" style="min-height:250px">
 			<h3>Step 1</h3><br>
 			<i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
 			<p>Choose image file</p>
@@ -60,7 +60,7 @@
 		<div class="w3-card w3-container" style="min-height:250px">
 			<h3>Step 2</h3><br>
 			<i class="fa fa-css3 w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			<p>Generated image outline will be displayed</p>
+			<p>Generate image outline</p>
 			<p>Confirm image outline</p>
 		</div>
 	</div>
@@ -69,7 +69,7 @@
 		<div class="w3-card w3-container" style="min-height:250px">
 			<h3>Step 3</h3><br>
 			<i class="fa fa-diamond w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-			<p>View the generated 3D human model</p>
+			<p>View the 3D human model</p>
 			<p>Upload another image</p>
 		</div>
 	</div>
@@ -77,7 +77,7 @@
 
 	<h2>Upload Image</h2><br>
 	Select an image to upload:<br>
-	<form enctype="multipart/form-data" action="upload.js" method="post">
+	<form enctype="multipart/form-data" method="post">
 		<input type="file" id="myFile" name="image" accept="image/*"><br>
 		<input type="submit" value="Upload Image" name="submit" />
 	</form>
