--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
 	-->
 	
 	<div id="drop-area">
-	<form class="my-form" action="upload.js">
-		<p>Upload image with the file dialog or by dragging and dropping the image onto the dashed region</p>
-		<input type="file" id="fileElem" accept="image/*" onchange="handleFiles(this.files)">
-		<label class="button" for="fileElem">Select some files</label>
-		<input type="submit" value="Upload Image" name="submit" />
-	</form>
-	</div>
+  <form class="my-form">
+    <p>Upload file with the file dialog or by dragging and dropping image onto the dashed region</p>
+    <input type="file" id="fileElem" accept="image/*" onchange="handleFiles(this.files)">
+    <label class="button" for="fileElem">Select some files</label>
+	<label class="button" input type="submit" value="Upload Image" name="submit" />
+  </form>
+  <progress id="progress-bar" max=100 value=0></progress>
+  <div id="gallery" /></div>
+</div>
 	
 
 </body>
