--- a/index.html
+++ b/index.html
@@ -75,26 +75,27 @@
 	</div>
 </div>
 
-	<h2>Upload Image</h2><br>
-	Select an image to upload:<br>
+	<h2>Upload Image</h2><
+	Select an image to upload:
 	<!--
 	<form enctype="multipart/form-data" action="/upload/image" method="post">
 		<input type="file" id="fileUpload" name="image" accept="image/*"><br>
 		<input type="submit" value="Upload Image" name="submit" />
 	</form>
-	<script src="upload.js"></script>
 	-->
 	
 	<div id="drop-area">
   <form class="my-form">
     <p>Upload file with the file dialog or by dragging and dropping image onto the dashed region</p>
-    <input type="file" id="fileElem" accept="image/*" onchange="handleFiles(this.files)">
+    <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
     <label class="button" for="fileElem">Select some files</label>
 	<label class="button" input type="submit" value="Upload Image" name="submit" />
   </form>
   <progress id="progress-bar" max=100 value=0></progress>
   <div id="gallery" /></div>
 </div>
+
+<script src="upload.js"></script>
 	
 
 </body>
