--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	</div>
 </div>
 
-	<h2>Upload Image</h2><
+	<h2>Upload Image</h2>
 	Select an image to upload:
 	<!--
 	<form enctype="multipart/form-data" action="/upload/image" method="post">
@@ -89,7 +89,7 @@
     <p>Upload file with the file dialog or by dragging and dropping image onto the dashed region</p>
     <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
     <label class="button" for="fileElem">Select some files</label>
-	<label class="button" input type="submit" value="Upload Image" name="submit" />
+	<input type="submit" value="Upload Image" name="submit" />
   </form>
   <progress id="progress-bar" max=100 value=0></progress>
   <div id="gallery" /></div>
