--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
 	</div>
 </div>
 
-	<h2>Upload Image</h2>
-	Select an image to upload:
+	<h2> Step 1: Select an image to upload </h2>
 	<!--
 	<form enctype="multipart/form-data" action="/upload/image" method="post">
 		<input type="file" id="fileUpload" name="image" accept="image/*"><br>
