--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <header class="w3-container w3-theme w3-padding" id="myHeader">
 <div class="w3-bar w3-theme">
-  <a href="index,html" class="w3-bar-item w3-button w3-padding-16">Home</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-16">Home</a>
   <a href="index1.html" class="w3-bar-item w3-button w3-padding-16">Model</a>
 </div>
   <div class="w3-center">
